[project]
name = "bedrock-ez-search"
version = "0.1.0"
description = "Rapid semantic search over a list of strings using Amazon Bedrock text embedding models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'boto3>=1.37.26',
    'numpy>=2.2.4',
    'scikit-learn>=1.6.1'
]

[project.urls]
Homepage = "https://github.com/yourusername/bedrock-ez-search"
Issues = "https://github.com/yourusername/bedrock-ez-search/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
